brat/test/golden/error/pass.brat.golden
Error in test/golden/error/pass.brat@FC {start = Pos {line = 5, col = 11}, end = Pos {line = 5, col = 19}}:
f = { .., (x => x) }
          ^^^^^^^^

  Nothing to bind to: x

